# anmol-node

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.chainspec  Makefile  README.md  docker-compose.ibtida.yml  docker-compose.yml  ibtidaRaw.json  polkadot-types.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: report-a-bug.md  suggest-a-feature.md
.github/workflows/: build.yml  check.yml  deploy.yml
chains/: ibtida.json
chains/raw/: ibtida.json
chains/todelete/: ibtida.json
docs/: rust-setup.md
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/anmol-nft/: Cargo.toml
pallets/anmol-utils/: Cargo.toml
pallets/anmol-utils/src/: lib.rs
pallets/base-nft/: Cargo.toml
pallets/base-nft/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  mock.rs  tests.rs
pallets/nft/: Cargo.toml  README.md  polkadot-types.json
pallets/nft/src/: benchmarking.rs  lib.rs  local_storage.rs  mock.rs  offchain.rs  tests.rs  utils.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs
scripts/: docker_run.sh  generate-chain-spec.sh  generate-keys.sh  import-keys.sh  init.sh  keystore.json  purge-chain.sh
specs/: ibtida_raw_spec.json
