[package]
name = "base-nft"
description = "A pallet to extend for building advanced NFT functions"
repository = "https://github.com/anmolnetwork/anmol-node"
license = "GNU Affero General Public License v3.0"
version = "0.1.0"
authors = ['DotMatrix <hello@dotmatrix.im>']
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
anmol-utils = { version = "0.1.0", default-features = false, path = "../../common/anmol-utils" }

[dev-dependencies]
sp-io = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
disable-tokens-by-owner = []
