[package]
authors = ['DotMatrix <hello@dotmatrix.im>']
description = 'Nft pallet'
edition = '2018'
homepage = 'https://anmol.network/'
license = 'Unlicense'
name = 'pallet-nft'
readme = 'README.md'
repository = 'https://github.com/anmolnetwork/anmol-node/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
orml-nft = { version = "0.4.0", default-features = false }

[dev-dependencies]


[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-io/std',
	'orml-nft/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
